--- a/index.html
+++ b/index.html
@@ -4,8 +4,118 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+
+
+    <header>
+        <h1>Good Eats - Street Tacos</h1>
+        <nav>
+            <ul>
+                <li><a href="#save">Save</a></li>
+                <li><a href="#share">Share</a></li>
+                <li><a href="#print">Print</a></li>
+                <li><a href="#jump-recipe">Jump to Recipe</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="recipe-intro">
+            <h2>Street Tacos</h2>
+            <img src="street-tacos.png" alt="Delicious street tacos">
+            <p>Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!</p>
+            <p>These street tacos are completely jam-packed with flavor and they are so easy to make. I love how the meat is so tender and juicy and only takes an hour to marinate! If you absolutely love tacos like me, try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef tacos will not disappoint!!</p>
+        </section>
+
+        <section class="recipe-details">
+            <h3>Details</h3>
+            <ul>
+                <li>Prep Time: 10 minutes</li>
+                <li>Cook Time: 10 minutes</li>
+                <li>Total Time: 20 minutes</li>
+                <li>Author: Taco Cheesington</li>
+                <li>Servings: 6 Tacos</li>
+            </ul>
+        </section>
+
+        <section class="ingredients">
+            <h3>Ingredients</h3>
+            <ul>
+                <li>Flank steak</li>
+                <li>Soy Sauce</li>
+                <li>Worcestershire sauce</li>
+                <li>Lime</li>
+                <li>Minced garlic</li>
+                <li>Cilantro</li>
+                <li>Chili powder</li>
+                <li>Cumin</li>
+                <li>Salt</li>
+                <li>Pepper</li>
+                <li>Corn tortillas</li>
+            </ul>
+        </section>
+
+        <section class="directions">
+            <h3>Directions</h3>
+            <ol>
+                <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
+                <li>Marinate: Add the steak and let marinate in the fridge for 1-2 hours.</li>
+                <li>Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.</li>
+                <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
+            </ol>
+        </section>
+
+        <section class="side-dishes">
+            <h3>Need some side dishes?</h3>
+            <ul>
+                <li>
+                    <img src="mexican-rice.png" alt="Mexican Rice">
+                    <p>Traditional recipe with a twist. Rating: 4 of 5 Stars</p>
+                </li>
+                <li>
+                    <img src="salsa.png" alt="Salsa">
+                    <p>Just the right amount of spice. Rating: 5 of 5 Stars</p>
+                </li>
+                <li>
+                    <img src="guacamole.png" alt="Guacamole">
+                    <p>Fresh and healthy. Rating: 4 of 5 Stars</p>
+                </li>
+                <li>
+                    <img src="tortillas.png" alt="Tortillas">
+                    <p>Easy to make and so good. Rating: 4 of 5 Stars</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <nav class="main-navigation">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#breakfast">Breakfast</a></li>
+                <li><a href="#brunch">Brunch</a></li>
+                <li><a href="#lunch">Lunch</a></li>
+                <li><a href="#dinner">Dinner</a></li>
+                <li><a href="#appetizers">Appetizers</a></li>
+                <li><a href="#desserts">Desserts</a></li>
+                <li><a href="#beverages">Beverages</a></li>
+                <li><a href="#search">Search</a></li>
+            </ul>
+        </nav>
+        <div class="social-media">
+            <p>Connect:</p>
+            <ul>
+                <li><a href="#facebook">Facebook</a></li>
+                <li><a href="#instagram">Instagram</a></li>
+                <li><a href="#youtube">YouTube</a></li>
+                <li><a href="#tiktok">Tik Tok</a></li>
+            </ul>
+        </div>
+        <p>&copy; 2022 Taco Cheesington</p>
+        <img src="Taco-cheesington.png" alt="Taco Cheesington Logo">
+    </footer>
 </body>
-</html>
+</html
