--- a/index.html
+++ b/index.html
@@ -121,24 +121,42 @@
                 </div>
                 <img src="images/street-tacos.png" alt="Delicious street tacos" style="width: 100%; height: auto;">
 
-                <p>Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!</p>
-                <p>These street tacos are completely jam-packed with flavor and they are so easy to make. I love how the meat is so tender and juicy and only takes an hour to marinate! If you absolutely love tacos like me, try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef tacos will not disappoint!!</p>
+                <p class="street-tacos-p">Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!</p>
+                <p class="street-tacos-p">These street tacos are completely jam-packed with flavor and they are so easy to make. I love how the meat is so tender and juicy and only takes an hour to marinate! If you absolutely love tacos like me, try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef tacos will not disappoint!!</p>
             </section>
             
 
             <section class="recipe-details">
-                <h3>Details</h3>
-                <ul>
-                    <li>Prep Time: 10 minutes</li>
-                    <li>Cook Time: 10 minutes</li>
-                    <li>Total Time: 20 minutes</li>
-                    <li>Author: Taco Cheesington</li>
-                    <li>Servings: 6 Tacos</li>
-                </ul>
+                <h2>Details</h2>
+                <table>
+                    <tbody>
+                        <tr>
+                            <td class="bold">Prep Time</td>
+                            <td>10 minutes</td>
+                        </tr>
+                        <tr>
+                            <td class="bold">Cook Time</td>
+                            <td>10 minutes</td>
+                        </tr>
+                        <tr>
+                            <td class="bold">Total Time</td>
+                            <td>20 minutes</td>
+                        </tr>
+                        <tr>
+                            <td class="bold">Author</td>
+                            <td>Taco Cheesington</td>
+                        </tr>
+                        <tr>
+                            <td class="bold">Servings</td>
+                            <td>6 Tacos</td>
+                        </tr>
+                    </tbody>
+                </table>
             </section>
+            
 
             <section class="ingredients">
-                <h3>Ingredients</h3>
+                <h2>Ingredients</h2>
                 <ul>
                     <li>Flank steak</li>
                     <li>Soy Sauce</li>
@@ -155,7 +173,7 @@
             </section>
 
             <section class="directions">
-                <h3>Directions</h3>
+                <h2>Directions</h2>
                 <ol>
                     <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
                     <li>Marinate: Add the steak and let marinate in the fridge for 1-2 hours.</li>
@@ -165,7 +183,7 @@
             </section>
 
             <section class="side-dishes">
-                <h3>Need some side dishes?</h3>
+                <h2>Need some side dishes?</h2>
                 <ul>
                     <li>
                         <img src="images/mexican-rice.png" alt="Mexican Rice">
