--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
             <section class="directions">
                 <h2>Directions</h2>
                 <ol>
-                    <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
-                    <li>Marinate: Add the steak and let marinate in the fridge for 1-2 hours.</li>
-                    <li>Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.</li>
-                    <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
+                    <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper</li><br>
+                    <li>Marinate: Add the steak and let marinate in the fridge for 1-2 hours.</li><br>
+                    <li>Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.</li><br>
+                    <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li><br>
                 </ol>
             </section>
 
